--- a/Quadros/380/380.ipynb
+++ b/Quadros/380/380.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T13:51:45.387375Z",
-     "start_time": "2019-11-05T13:51:44.379915Z"
+     "end_time": "2019-11-08T18:37:08.478222Z",
+     "start_time": "2019-11-08T18:37:08.473225Z"
     }
    },
    "outputs": [],
    "source": [
-    "from tqdm import tqdm\n",
+    "from tqdm.notebook import tqdm\n",
     "from tkinter import Tk\n",
     "from tkinter import filedialog\n",
     "from pandas import DataFrame as DF\n",
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T13:51:45.398373Z",
-     "start_time": "2019-11-05T13:51:45.390377Z"
+     "end_time": "2019-11-08T18:37:09.863670Z",
+     "start_time": "2019-11-08T18:37:09.855695Z"
     }
    },
    "outputs": [],
@@ -50,6 +50,26 @@
     }
    },
    "source": [
+    "Campo| Posição Inicial| Tamanho |Formato |Índice|Descrição\n",
+    ":-------|:-------|:-------|:-------|:-------|:-------\n",
+    "EBRSEQ |1|7|nnnnnnn|line[0:7]|Número da linha do arquivo.\n",
+    "ENTCODIGO |8|5|nnnnn|line[7:12]|Código da sociedade seguradora/entidade na SUSEP.\n",
+    "MRFMESANO |13|8|aaaammdd|line[12:20]|Ano, mês e último dia do mês de referência do FIP/SUSEP.\n",
+    "QUAID|21|3|nnn|line[20:23]|Código do quadro (Quaid: 380). [Tabela ‘Quadros’ do FIPSUSEP]\n",
+    "CMPID |24|4|nnnn|line[23:27]|Código do tipo de evento. [Tabela “Bib_DefCampos” do FIP/SUSEP]\n",
+    "PLNCODIGO |28|6|nnnnnn|line[27:33]|Código do plano. [Tabela Planos do FIP]\n",
+    "EBRNUMPROP |34|21|nnnnnnnnnnnnnnnnnnnnn|line[33:54]|Número da proposta.\n",
+    "EBRCPFPART|55|11|nnnnnnnnnnn|line[54:65]|CPF do participante/segurado do plano.\n",
+    "EBRCPFBENF |66|11|nnnnnnnnnnn|line[65:76]|CPF do beneficiário.\n",
+    "EBRDATAINICIO|77|8|aaaammdd|line[76:84]|Data de início de vigência do risco.\n",
+    "EBRDATAFIM |85|8|aaaammdd|line[84:92]|Data de fim de vigência do risco.\n",
+    "EBRDATAOCORR|93|8|aaaammdd |line[92:100]|Data de ocorrência do evento.\n",
+    "EBRDATAREG |101|8|aaaammdd |line[100:108]|Data em que a entidade/seguradora efetuou o registro do evento pendente de pagamento\n",
+    "EBRVALORMOV |109|13|nnnnnnnnnn,nn|line[108:121]|Valor monetário do evento conforme registro na PSL ou valor do depósito judicial usado como dedutor da necessidade de cobertura, de acordo com o campo CMPID.\n",
+    "EBRCODCESS |122|5|nnnnn|line[121:126]|Código SUSEP da sociedade seguradora que efetuou a cessão (cosseguro aceito), ou da seguradora ou resseguradora que aceitou o risco (cosseguro cedido ou resseguro).\n",
+    "EBRNUMSIN |127|20|nnnnnnnnnnnnnnnnnnnn|line[126:146]|Código do evento.\n",
+    "\n",
+    "\n",
     "Regra |Descrição| Impeditiva\n",
     ":-------|:-----------|:-----------\n",
     "7396.1|Verifica se não há linhas em branco.|Sim\n",
@@ -67,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-05T13:51:56.446143Z",
@@ -75,22 +95,7 @@
     },
     "code_folding": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Digite o código da entidade: 04251\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "22870it [00:06, 3384.79it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ENTCODIGO_input = input(\"Digite o código da entidade: \")\n",
     "CMPID_valid = [str(i) for i in range(1053, 1064)]\n",
@@ -185,119 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-05T13:51:56.477127Z",
      "start_time": "2019-11-05T13:51:56.449142Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Linhas afetadas</th>\n",
-       "      <th>Linhas Analizadas</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7396.1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.5</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.6</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.7</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.8</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.9</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.10</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7396.11</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22870</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Linhas afetadas  Linhas Analizadas\n",
-       "7396.1               0.0              22870\n",
-       "7396.2               0.0              22870\n",
-       "7396.3               0.0              22870\n",
-       "7396.4               0.0              22870\n",
-       "7396.5               0.0              22870\n",
-       "7396.6               0.0              22870\n",
-       "7396.7               0.0              22870\n",
-       "7396.8               0.0              22870\n",
-       "7396.9               8.0              22870\n",
-       "7396.10              0.0              22870\n",
-       "7396.11              0.0              22870"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_criticas[\"Linhas Analizadas\"] = lines\n",
     "df_criticas"
@@ -305,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-05T13:51:57.426351Z",
@@ -315,6 +215,85 @@
    "outputs": [],
    "source": [
     "df_criticas.to_excel(\"380.xlsx\", sheet_name=\"Críticas 390\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-08T18:38:01.474326Z",
+     "start_time": "2019-11-08T18:37:50.327714Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46ee9880a1144db4a89e8111c3cbe9c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"380_Export.csv\", \"a+\") as csv:\n",
+    "    header = [\n",
+    "        \"EBRSEQ\",\n",
+    "        \"ENTCODIGO\",\n",
+    "        \"MRFMESANO\",\n",
+    "        \"QUAID\",\n",
+    "        \"CMPID\",\n",
+    "        \"PLNCODIGO\",\n",
+    "        \"EBRNUMPROP\",\n",
+    "        \"EBRCPFPART\",\n",
+    "        \"EBRCPFBENF\",\n",
+    "        \"EBRDATAINICIO\",\n",
+    "        \"EBRDATAFIM\",\n",
+    "        \"EBRDATAOCORR\",\n",
+    "        \"EBRDATAREG\",\n",
+    "        \"EBRVALORMOV\",\n",
+    "        \"EBRCODCESS\",\n",
+    "        \"EBRNUMSIN\"]\n",
+    "    csv.write(\";\".join(header)+\"\\n\")\n",
+    "    \n",
+    "with open(\"380_Export.csv\", \"a+\") as csv:\n",
+    "    for n, line in tqdm(get_lines()):\n",
+    "        line = line.strip().replace(\".\", \",\")\n",
+    "        if not (line == \"\" or line == None):\n",
+    "            data = [\n",
+    "                line[0:7],\n",
+    "                line[7:12],\n",
+    "                line[12:20],\n",
+    "                line[20:23],\n",
+    "                line[23:27],\n",
+    "                line[27:33],\n",
+    "                line[33:54],\n",
+    "                line[54:65],\n",
+    "                line[65:76],\n",
+    "                line[76:84],\n",
+    "                line[84:92],\n",
+    "                line[92:100],\n",
+    "                line[100:108],\n",
+    "                line[108:121],\n",
+    "                line[121:126],\n",
+    "                line[126:146],\n",
+    "            ]\n",
+    "\n",
+    "            csv.write(\";\".join(data)+\"\\n\")"
    ]
   }
  ],
