--- a/Quadros/381/381.ipynb
+++ b/Quadros/381/381.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T18:52:57.099522Z",
-     "start_time": "2019-11-05T18:52:56.061076Z"
+     "end_time": "2019-11-08T17:17:58.364211Z",
+     "start_time": "2019-11-08T17:17:56.999982Z"
     }
    },
    "outputs": [],
@@ -24,8 +24,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T18:52:57.112474Z",
-     "start_time": "2019-11-05T18:52:57.102481Z"
+     "end_time": "2019-11-08T17:17:58.382198Z",
+     "start_time": "2019-11-08T17:17:58.368207Z"
     }
    },
    "outputs": [],
@@ -451,15 +451,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-31T19:53:22.965649Z",
-     "start_time": "2019-10-31T19:53:22.958654Z"
+     "end_time": "2019-11-08T17:18:32.099690Z",
+     "start_time": "2019-11-08T17:18:04.189561Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "810180it [00:27, 29079.19it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def export_381():\n",
+    "    with open(\"export381.csv\", \"a+\") as csv:\n",
+    "        header = [\n",
+    "            \"PBCSEQ\",\n",
+    "            \"ENTCODIGO\",\n",
+    "            \"MRFMESANO\",\n",
+    "            \"QUAID\",\n",
+    "            \"PBCCPFPARTIC\",\n",
+    "            \"PBCIDADE\",\n",
+    "            \"PBCVALORBENEF\",\n",
+    "            \"PBCVALORRESER\",\n",
+    "            \"PLNCODIGO\",\n",
+    "            \"TPEVID\",\n",
+    "            \"TPRENID\",\n",
+    "            \"TBOID\",\n",
+    "            \"PBCTAXAJUROS\",\n",
+    "            \"TFCID\",\n",
+    "            \"PBCNUMRECEBAN\",\n",
+    "            \"PBCMESRENDA13\",\n",
+    "            \"TFPID\",\n",
+    "            \"PBCTEMPORECEB\",\n",
+    "            \"PBCTEMPORARIE\",\n",
+    "            \"PBCIDADBENREV\",\n",
+    "            \"TBOIDBENREV\",\n",
+    "            \"PBCPERCREV\",\n",
+    "            \"PBCDATULTATU\",\n",
+    "            \"PRAID\",\n",
+    "            \"INDID\",\n",
+    "            \"DFAID\",\n",
+    "            ]\n",
+    "        csv.write(\";\".join(header)+\"\\n\")\n",
+    "\n",
+    "        for n, line in tqdm(get_lines()):\n",
+    "            line = line.strip().replace(\".\",\",\")\n",
+    "            if not (line == \"\" or line == None):\n",
+    "                try:\n",
+    "                    campos = [\n",
+    "                        line[0:6],\n",
+    "                        line[6:11],\n",
+    "                        to_datetime(line[11:19]).strftime(\"%d/%m/%Y\"),\n",
+    "                        line[19:22],\n",
+    "                        line[22:33],\n",
+    "                        line[33:37],\n",
+    "                        line[37:53],\n",
+    "                        line[53:69],\n",
+    "                        line[69:75],\n",
+    "                        line[75:76],\n",
+    "                        line[76:78],\n",
+    "                        line[78:80],\n",
+    "                        line[80:85],\n",
+    "                        line[85:86],\n",
+    "                        line[86:88],\n",
+    "                        line[88:90],\n",
+    "                        line[90:91],\n",
+    "                        line[91:95],\n",
+    "                        line[95:99],\n",
+    "                        line[99:103],\n",
+    "                        line[103:105],\n",
+    "                        line[105:111],\n",
+    "                        to_datetime(line[111:119]).strftime(\"%d/%m/%Y\"),\n",
+    "                        line[119:121],\n",
+    "                        line[121:122],\n",
+    "                        line[122:123]\n",
+    "                    ]\n",
+    "                    csv.write(\";\".join(campos)+\"\\n\")\n",
+    "                except:\n",
+    "                    pass\n",
+    "export_381()"
+   ]
   }
  ],
  "metadata": {
