--- a/Quadros/382/382.ipynb
+++ b/Quadros/382/382.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T17:21:04.519597Z",
-     "start_time": "2019-11-05T17:21:03.321268Z"
+     "end_time": "2019-11-06T17:37:09.222770Z",
+     "start_time": "2019-11-06T17:37:07.612650Z"
     }
    },
    "outputs": [],
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T17:21:04.531578Z",
-     "start_time": "2019-11-05T17:21:04.522582Z"
+     "end_time": "2019-11-06T17:37:09.235768Z",
+     "start_time": "2019-11-06T17:37:09.225773Z"
     }
    },
    "outputs": [],
@@ -324,6 +324,82 @@
    "source": [
     "df_criticas[\"Linhas Analizadas\"] = lines\n",
     "df_criticas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-06T17:38:32.839434Z",
+     "start_time": "2019-11-06T17:38:26.920912Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "18545it [00:05, 3158.99it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def export_382():\n",
+    "    with open(\"export_382.csv\", \"a+\") as csv:\n",
+    "        header = [\n",
+    "            \"ESCSEQ\",\n",
+    "            \"ENTCODIGO\",\n",
+    "            \"MRFMESANO\",\n",
+    "            \"QUAID\",\n",
+    "            \"TPMOID\",\n",
+    "            \"CMPID\",\n",
+    "            \"PLNCODIGO\",\n",
+    "            \"ESCDATAINICIORO\",\n",
+    "            \"ESCDATAFIMRO\",\n",
+    "            \"ESCDATAEMISSRO\",\n",
+    "            \"ESCVALORMOVRO\",\n",
+    "            \"ESCDATAINICIORD\",\n",
+    "            \"ESCDATAFIMRD\",\n",
+    "            \"ESCDATAEMISSRD\",\n",
+    "            \"ESCVALORMOVRD\",\n",
+    "            \"ESCIMPSEG\",\n",
+    "            \"ESCCODCESS\",\n",
+    "            \"ESCFREQ\",\n",
+    "            \"ESCVALORCARO\",\n",
+    "            \"ESCVALORCARD\",\n",
+    "            \"ESCVALORCIRO\",\n",
+    "            \"ESCVALORCIRD\",\n",
+    "        ]\n",
+    "        csv.write(\";\".join(header)+\"\\n\")\n",
+    "        for n, line in tqdm(get_lines()):\n",
+    "            campos = [\n",
+    "                line[0:7],\n",
+    "                line[7:12],\n",
+    "                line[12:20],\n",
+    "                line[20:23],\n",
+    "                line[23:27],\n",
+    "                line[27:31],\n",
+    "                line[31:37],\n",
+    "                line[37:45],\n",
+    "                line[45:53],\n",
+    "                line[53:61],\n",
+    "                line[61:74],\n",
+    "                line[74:82],\n",
+    "                line[82:90],\n",
+    "                line[90:98],\n",
+    "                line[98:111],\n",
+    "                line[111:127],\n",
+    "                line[127:132],\n",
+    "                line[132:136],\n",
+    "                line[136:149],\n",
+    "                line[149:162],\n",
+    "                line[162:175],\n",
+    "                line[175:188],\n",
+    "            ]\n",
+    "            csv.write(\";\".join(campos)+\"\\n\")\n",
+    "        \n",
+    "export_382()"
    ]
   }
  ],
