--- a/PPNG/PPNG.ipynb
+++ b/PPNG/PPNG.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:01.326232Z",
-     "start_time": "2019-10-29T20:33:59.792082Z"
+     "end_time": "2019-11-08T14:23:10.616865Z",
+     "start_time": "2019-11-08T14:23:07.893719Z"
     }
    },
    "outputs": [],
@@ -24,15 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:01.337743Z",
-     "start_time": "2019-10-29T20:34:01.328747Z"
+     "end_time": "2019-11-08T14:23:10.628819Z",
+     "start_time": "2019-11-08T14:23:10.619821Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -49,20 +47,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:23.387955Z",
-     "start_time": "2019-10-29T20:34:01.469671Z"
+     "end_time": "2019-11-08T14:23:10.779861Z",
+     "start_time": "2019-11-08T14:23:10.635812Z"
     },
     "code_folding": []
    },
    "outputs": [],
    "source": [
-    "columns = [str(i) in range(1065,1077)]\n",
+    "def get_ramos(entcodigo, ano):\n",
+    "    ramos = []\n",
+    "    try:\n",
+    "        request = requests.get(\n",
+    "            \"https://www2.susep.gov.br/menuestatistica/SES/premiosesinistros.aspx?id=54\")\n",
+    "        sopa = BeautifulSoup(request.text, \"html.parser\")\n",
     "\n",
+    "        params = (('id', '54'))\n",
+    "        data = {\n",
+    "            '__VIEWSTATE': sopa.find(\"input\", {\"name\": \"__VIEWSTATE\"})[\"value\"],\n",
+    "            '__VIEWSTATEGENERATOR': sopa.find(\"input\", {\"name\": \"__VIEWSTATEGENERATOR\"})[\"value\"],\n",
+    "            '__EVENTVALIDATION': sopa.find(\"input\", {\"name\": \"__EVENTVALIDATION\"})[\"value\"],\n",
+    "            'ctl00$ContentPlaceHolder1$edEmpresas': entcodigo.ljust(10, \" \"),\n",
+    "            'ctl00$ContentPlaceHolder1$edInicioPer': str(ano)+\"01\",\n",
+    "            'ctl00$ContentPlaceHolder1$edFimPer': str(ano)+\"12\",\n",
+    "            'ctl00$ContentPlaceHolder1$optAgrupamento': 'RAM',\n",
+    "            'ctl00$ContentPlaceHolder1$btnProcessao': 'Processar'}\n",
+    "\n",
+    "        request = requests.post(\n",
+    "            'https://www2.susep.gov.br/menuestatistica/SES/premiosesinistros.aspx', params=params, data=data)\n",
+    "        sopa = BeautifulSoup(request.text, \"html.parser\")\n",
+    "        elements = sopa.find_all(\"td\", {\"align\": \"left\"})\n",
+    "        for element in elements[3:]:\n",
+    "            ramos.append(element.text[:4])\n",
+    "        return ramos\n",
+    "    except:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-08T14:23:17.432997Z",
+     "start_time": "2019-11-08T14:23:10.784856Z"
+    },
+    "code_folding": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite um ENTCODIGO: \n",
+      "04251\n",
+      "\n",
+      "Digite um ano (Formato aaaa): \n",
+      "2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = [\"1026\", \"1027\", \"1028\", \"1029\", \"1030\",\n",
+    "          \"1031\", \"1032\", \"1033\", \"1034\", \"1035\", \"1036\", \"1037\"]\n",
     "os.system(\"cls\")\n",
+    "entcodigo = input(\"Digite um ENTCODIGO: \\n\")\n",
+    "ano = input(\"\\nDigite um ano (Formato aaaa): \\n\")\n",
     "\n",
+    "ramos = get_ramos(entcodigo, ano)\n",
     "len_ramos = len(ramos)\n",
     "index = [[7]*len_ramos+[8]*len_ramos+[9]*len_ramos+[10]*len_ramos,ramos*4]\n",
     "\n",
@@ -75,13 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:23.410948Z",
-     "start_time": "2019-10-29T20:34:23.390955Z"
-    },
-    "code_folding": []
+     "end_time": "2019-11-08T14:23:17.461980Z",
+     "start_time": "2019-11-08T14:23:17.435996Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -89,44 +142,67 @@
     "    total = 0\n",
     "    print(\"\\nSelecione os arquivos: \\n\")\n",
     "    for line in get_lines():\n",
-    "        tpmoid = int(line[23:27])                          # TPMOID          #\n",
-    "        cmpid = line[27:31]                                # CMPID           #\n",
-    "        ramo = line[31:35]                                 # RAMCODIGO       #\n",
-    "        inicio_ro = to_date(line[35:43])                   # ESPDATAINICIORO #\n",
-    "        fim_ro = to_date(line[43:51])                      # ESPDATAFIMRO    #\n",
-    "        emiss_ro = to_date(line[51:59])                    # ESPDATAEMISSRO  #\n",
-    "        inicio_rd = to_date(line[72:80])                   # ESPDATAINICIORD #\n",
-    "        fim_rd = to_date(line[80:88])                      # ESPDATAFIMRD    #\n",
-    "        emiss_rd = to_date(line[88:96])                    # ESPDATAEMISSRD  #\n",
-    "        valor_ro = float(line[59:72].replace(\",\", \".\"))    # ESPVALORMOVRO   #\n",
-    "        valor_rd = float(line[96:109].replace(\",\", \".\"))   # ESPVALORMOVRD   #\n",
+    "        try:\n",
+    "            tpmoid = int(line[23:27])                          # TPMOID          #\n",
+    "            cmpid = line[27:31]                                # CMPID           #\n",
+    "            ramo = line[31:35]                                 # RAMCODIGO       #\n",
+    "            inicio_ro = to_date(line[35:43])                   # ESPDATAINICIORO #\n",
+    "            fim_ro = to_date(line[43:51])                      # ESPDATAFIMRO    #\n",
+    "            emiss_ro = to_date(line[51:59])                    # ESPDATAEMISSRO  #\n",
+    "            inicio_rd = to_date(line[72:80])                   # ESPDATAINICIORD #\n",
+    "            fim_rd = to_date(line[80:88])                      # ESPDATAFIMRD    #\n",
+    "            emiss_rd = to_date(line[88:96])                    # ESPDATAEMISSRD  #\n",
+    "            valor_ro = float(line[59:72].replace(\",\", \".\"))    # ESPVALORMOVRO   #\n",
+    "            valor_rd = float(line[96:109].replace(\",\", \".\"))   # ESPVALORMOVRD   #\n",
     "\n",
-    "        valor = 0\n",
+    "            valor = 0\n",
     "\n",
-    "        if emiss_rd <= data_calc < inicio_rd:\n",
-    "            valor = valor_rd \n",
-    "        elif inicio_rd <= data_calc < fim_rd:\n",
-    "            valor = valor_rd*((fim_rd-data_calc).days/((fim_rd-inicio_rd).days+1))\n",
-    "            \n",
-    "        df_ppng.loc[(tpmoid, ramo),cmpid] += valor \n",
-    "        \n",
-    "        if data_calc < emiss_rd:\n",
-    "            df_rvne.loc[(tpmoid, ramo),cmpid] += valor\n",
-    "            \n",
-    "        total += 1\n",
+    "            if emiss_rd <= data_calc < inicio_rd:\n",
+    "                valor = valor_rd \n",
+    "            elif inicio_rd <= data_calc < fim_rd:\n",
+    "                valor = valor_rd*((fim_rd-data_calc).days/((fim_rd-inicio_rd).days+1))\n",
+    "\n",
+    "            df_ppng.loc[(tpmoid, ramo),cmpid] += valor \n",
+    "\n",
+    "            if data_calc < emiss_rd:\n",
+    "                df_rvne.loc[(tpmoid, ramo),cmpid] += valor\n",
+    "\n",
+    "            total += 1\n",
+    "        except:\n",
+    "            pass\n",
     "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:49.564869Z",
-     "start_time": "2019-10-29T20:34:23.414939Z"
-    }
+     "end_time": "2019-11-08T14:24:05.134758Z",
+     "start_time": "2019-11-08T14:23:17.467978Z"
+    },
+    "code_folding": [
+     0
+    ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Digite a data de cálculo: (Formato aaaammdd) \n",
+      "20190831\n",
+      "\n",
+      "Selecione os arquivos: \n",
+      "\n",
+      "\n",
+      "Velocidade: 37.65s\n",
+      "Média: 1270.48 linha/s\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "data_calc = to_date(input(\"\\nDigite a data de cálculo: (Formato aaaammdd) \\n\"))\n",
     "start = time()\n",
@@ -139,26 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:01.466714Z",
-     "start_time": "2019-10-29T20:34:01.344738Z"
-    },
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:49.587824Z",
-     "start_time": "2019-10-29T20:34:49.573833Z"
+     "end_time": "2019-11-08T14:24:05.159747Z",
+     "start_time": "2019-11-08T14:24:05.140752Z"
     }
    },
    "outputs": [],
@@ -171,13 +232,22 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:51.939339Z",
-     "start_time": "2019-10-29T20:34:49.591823Z"
+     "start_time": "2019-11-08T14:23:07.868Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exportando para Excel...\n",
+      "\n",
+      "\n",
+      "Sucesso!\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"\n",
     "print(\"Exportando para Excel...\\n\\n\")\n",
     "with pd.ExcelWriter('Provisões.xlsx') as writer:  # doctest: +SKIP\n",
     "    df_ppng.to_excel(writer, sheet_name='PPNG')\n",
@@ -185,8 +255,7 @@
     "    df_rve.to_excel(writer, sheet_name='RVE')\n",
     "print(\"Sucesso!\")\n",
     "sleep(2)\n",
-    "quit()\n",
-    "\"\"\""
+    "quit()"
    ]
   },
   {
@@ -194,12 +263,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:51.954326Z",
-     "start_time": "2019-10-29T20:34:51.943337Z"
+     "start_time": "2019-11-08T14:23:07.871Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_ppng[\"PPNG\"] = df_ppng[\"1026\"] + df_ppng[\"1027\"] - df_ppng[\"1027\"]\n",
+    "df_ppng[\"PPNG\"] -= (df_ppng[\"1030\"] + df_ppng[\"1031\"] - df_ppng[\"1032\"])\n",
+    "df_ppng[\"PPNG\"] -= (df_ppng[\"1034\"] + df_ppng[\"1035\"] - df_ppng[\"1036\"])"
+   ]
   }
  ],
  "metadata": {
