--- a/Export.ipynb
+++ b/Export.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-16T18:30:45.279602Z",
-     "start_time": "2019-12-16T18:30:45.042238Z"
+     "end_time": "2020-01-27T20:25:54.066137Z",
+     "start_time": "2020-01-27T20:25:53.998320Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-16T18:30:45.297556Z",
-     "start_time": "2019-12-16T18:30:45.282595Z"
+     "end_time": "2020-01-27T20:25:54.084089Z",
+     "start_time": "2020-01-27T20:25:54.069130Z"
     }
    },
    "outputs": [],
@@ -32,9 +32,8 @@
     "    root.attributes(\"-topmost\", True)\n",
     "    root.withdraw()\n",
     "    for file in filedialog.askopenfilenames():\n",
-    "        with open(file, encoding=\"utf-8-sig\") as txt:\n",
-    "            for line in txt.readlines():\n",
-    "                yield line\n",
+    "        for line in open(file, encoding=\"utf-8\"):\n",
+    "            yield line\n",
     "                \n",
     "def convert(text,to_type):\n",
     "    try:\n",
@@ -47,7 +46,7 @@
     "        elif to_type == \"Float\":\n",
     "            return str(float(text.replace(\",\",\".\"))).replace(\".\",\",\")\n",
     "    except:\n",
-    "        return \"Erro ao converter :( \""
+    "        return text"
    ]
   },
   {
@@ -55,26 +54,28 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-16T18:30:45.342435Z",
-     "start_time": "2019-12-16T18:30:45.301544Z"
+     "end_time": "2020-01-27T20:25:54.155898Z",
+     "start_time": "2020-01-27T20:25:54.089076Z"
     },
     "code_folding": [
      1,
      18,
      32,
      55,
-     86,
-     109,
-     129,
-     148,
-     167,
-     185,
-     211,
-     236,
-     258,
-     271,
-     282,
-     292
+     79,
+     96,
+     127,
+     150,
+     170,
+     189,
+     208,
+     226,
+     252,
+     277,
+     299,
+     312,
+     323,
+     333
     ]
    },
    "outputs": [],
@@ -133,6 +134,47 @@
     "                \"ESPVALORCIRO\",\n",
     "                \"ESPVALORCIRD\",\n",
     "                \"ESPMOEDA\",\n",
+    "                ]\n",
+    "headers[379] = [\"EBISEQ\",\n",
+    "                \"ENTCODIGO\",\n",
+    "                \"MRFMESANO\",\n",
+    "                \"QUAID\",\n",
+    "                \"TPMOID\",\n",
+    "                \"TPMOPREV\",\n",
+    "                \"CMPID\",\n",
+    "                \"PLNCODIGO\",\n",
+    "                \"EBINUMPROP\",\n",
+    "                \"EBICPFPART\",\n",
+    "                \"EBICPFBENF\",\n",
+    "                \"EBIDATAINICIO\",\n",
+    "                \"EBIDATAFIM\",\n",
+    "                \"EBIDATAOCORR\",\n",
+    "                \"EBIDATAREG\",\n",
+    "                \"EBIDATACOMUNICA\",\n",
+    "                \"EBIBENVEN\",\n",
+    "                \"EBIVALORPBAC\",\n",
+    "                \"EBIVALORPBC\",\n",
+    "                \"EBIVALORMOV\",\n",
+    "                \"EBIVALORMON\",\n",
+    "                \"EBICODCESS\",\n",
+    "                \"EBINUMSIN\",\n",
+    "                ]\n",
+    "headers[380] = [\"EBRSEQ\",\n",
+    "                \"ENTCODIGO\",\n",
+    "                \"MRFMESANO\",\n",
+    "                \"QUAID\",\n",
+    "                \"CMPID\",\n",
+    "                \"PLNCODIGO\",\n",
+    "                \"EBRNUMPROP\",\n",
+    "                \"EBRCPFPART\",\n",
+    "                \"EBRCPFBENF\",\n",
+    "                \"EBRDATAINICIO\",\n",
+    "                \"EBRDATAFIM\",\n",
+    "                \"EBRDATAOCORR\",\n",
+    "                \"EBRDATAREG\",\n",
+    "                \"EBRVALORMOV\",\n",
+    "                \"EBRCODCESS\",\n",
+    "                \"EBRNUMSIN\",\n",
     "                ]\n",
     "headers[381] = [\"PBCSEQ\",\n",
     "                \"ENTCODIGO\",\n",
@@ -386,26 +428,28 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-16T18:30:45.427208Z",
-     "start_time": "2019-12-16T18:30:45.346425Z"
+     "end_time": "2020-01-27T20:25:54.353369Z",
+     "start_time": "2020-01-27T20:25:54.166869Z"
     },
     "code_folding": [
      1,
-     18,
-     32,
-     55,
-     86,
-     109,
+     19,
+     33,
+     56,
+     82,
+     99,
      129,
-     149,
-     168,
-     186,
-     212,
-     237,
-     259,
-     273,
-     284,
-     294
+     152,
+     172,
+     192,
+     211,
+     229,
+     255,
+     280,
+     302,
+     316,
+     327,
+     337
     ]
    },
    "outputs": [],
@@ -428,19 +472,19 @@
     "                   (93, 113, \"Int\"),\n",
     "                   (113, 126, \"Float\"),\n",
     "                   ]\n",
-    "references[377] = [(0, 7, \"Str\"),\n",
-    "                   (7, 12, \"Str\"),\n",
-    "                   (12, 20, \"Str\"),\n",
-    "                   (20, 23, \"Str\"),\n",
-    "                   (23, 27, \"Str\"),\n",
-    "                   (27, 31, \"Str\"),\n",
-    "                   (31, 39, \"Str\"),\n",
-    "                   (39, 47, \"Str\"),\n",
-    "                   (47, 55, \"Str\"),\n",
-    "                   (55, 63, \"Str\"),\n",
-    "                   (63, 76, \"Str\"),\n",
-    "                   (76, 81, \"Str\"),\n",
-    "                   (81, 101, \"Str\"),\n",
+    "references[377] = [(0, 7, \"Int\"),\n",
+    "                   (7, 12, \"Int\"),\n",
+    "                   (12, 20, \"Date\"),\n",
+    "                   (20, 23, \"Int\"),\n",
+    "                   (23, 27, \"Int\"),\n",
+    "                   (27, 31, \"Int\"),\n",
+    "                   (31, 39, \"Date\"),\n",
+    "                   (39, 47, \"Date\"),\n",
+    "                   (47, 55, \"Date\"),\n",
+    "                   (55, 63, \"Date\"),\n",
+    "                   (63, 76, \"Float\"),\n",
+    "                   (76, 81, \"Int\"),\n",
+    "                   (81, 101, \"Int\"),\n",
     "                   ]\n",
     "references[378] = [(0, 7, \"Str\"),\n",
     "                   (7, 12, \"Str\"),\n",
@@ -464,6 +508,49 @@
     "                   (144, 157, \"Str\"),\n",
     "                   (157, 170, \"Str\"),\n",
     "                   (170, 173, \"Str\"),\n",
+    "                   ]\n",
+    "references[379] = [(0, 7, \"Int\"),\n",
+    "                   (7, 12, \"Int\"),\n",
+    "                   (12, 20, \"Date\"),\n",
+    "                   (20, 23, \"Int\"),\n",
+    "                   (23, 27, \"Int\"),\n",
+    "                   (27, 31, \"Int\"),\n",
+    "                   (31, 35, \"Int\"),\n",
+    "                   (35, 41, \"Int\"),\n",
+    "                   (41, 62, \"Int\"),\n",
+    "                   (62, 73, \"Int\"),\n",
+    "                   (73, 84, \"Int\"),\n",
+    "                   (84, 92, \"Date\"),\n",
+    "                   (92, 100, \"Date\"),\n",
+    "                   (100, 108, \"Date\"),\n",
+    "                   (108, 116, \"Date\"),\n",
+    "                   (116, 124, \"Date\"),\n",
+    "                   (124, 128, \"Int\"),\n",
+    "                   (128, 141, \"Float\"),\n",
+    "                   (141, 154, \"Float\"),\n",
+    "                   (154, 167, \"Float\"),\n",
+    "                   (167, 180, \"Float\"),\n",
+    "                   (180, 185, \"Int\"),\n",
+    "                   (185, 205, \"Int\"),\n",
+    "\n",
+    "\n",
+    "                   ]\n",
+    "references[380] = [(0, 7, \"Int\"),\n",
+    "                   (7, 12, \"Int\"),\n",
+    "                   (12, 20, \"Date\"),\n",
+    "                   (20, 23, \"Int\"),\n",
+    "                   (23, 27, \"Int\"),\n",
+    "                   (27, 33, \"Int\"),\n",
+    "                   (33, 54, \"Int\"),\n",
+    "                   (54, 65, \"Int\"),\n",
+    "                   (65, 76, \"Int\"),\n",
+    "                   (76, 84, \"Date\"),\n",
+    "                   (84, 92, \"Date\"),\n",
+    "                   (92, 100, \"Date\"),\n",
+    "                   (100, 108, \"Date\"),\n",
+    "                   (108, 121, \"Float\"),\n",
+    "                   (121, 126, \"Int\"),\n",
+    "                   (126, 146, \"Int\")\n",
     "                   ]\n",
     "references[381] = [(0, 6, \"Int\"),\n",
     "                   (6, 11, \"Int\"),\n",
@@ -493,8 +580,7 @@
     "                   (122, 123, \"Str\"),\n",
     "                   (123, 126, \"Str\"),\n",
     "                   (126, 132, \"Str\"),\n",
-    "                   (132, 133, \"Str\"),\n",
-    "\n",
+    "                   (132, 133, \"Str\")\n",
     "                   ]\n",
     "references[382] = [(0, 7, \"Str\"),\n",
     "                   (7, 12, \"Str\"),\n",
@@ -716,16 +802,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-12-16T18:30:45.029Z"
+     "end_time": "2020-01-27T20:26:20.021433Z",
+     "start_time": "2020-01-27T20:25:54.357359Z"
     }
    },
    "outputs": [],
    "source": [
     "def export_to_csv(qe):\n",
-    "    with open(f\"{qe}_formatted.csv\", \"a+\") as csv:\n",
+    "    with open(f\"{qe}_formatted.csv\", \"a+\", encoding=\"utf-8\") as csv:\n",
     "        csv.write(\";\".join(headers[qe])+\"\\n\")\n",
     "        for line in get_lines():\n",
     "            if line not in [\"\\n\", None]:\n",
@@ -733,7 +820,7 @@
     "                data = [convert(line[i:x],z) for i, x, z in references[qe]]\n",
     "                csv.write(\";\".join(data)+\"\\n\")\n",
     "\n",
-    "for i in [419, 420, 421, 423]:\n",
+    "for i in [378]:\n",
     "    export_to_csv(i)"
    ]
   },
